# CUnitTests

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
include/CUnitTests/: CUnitTests.h
src/: CMakeLists.txt
src/include/cfakes/: cfakes.h
tests/: CMakeLists.txt  assertion_tests.c  asserts.c  example.c  main.c  setup_cleanup.c  simple_test.c  suite.c  test_macro.c
tests/basic/: CMakeLists.txt  main.c  simple_test.c
